Test image path

--- a/public/422.html
+++ b/public/422.html
@@ -72,7 +72,7 @@
   <div class="dialog">
     <div>
       <h1>La mise à jour demandée a été rejetée.</h1>
-      <img src="large_logo_remplamatch.png" alt="Logo RemplaMatch" width="50%">
+      <img src="/app/assets/images/large_logo_remplamatch.png" alt="Logo RemplaMatch" width="50%">
       <p>Vous avez potentiellement essayé de mettre à jour des éléments auxquels vous n'avez pas accès.</p>
       <br>
       <a href="javascript:history.back()">Page précédente</a>
