--- a/public/404.html
+++ b/public/404.html
@@ -72,7 +72,7 @@
   <div class="dialog">
     <div>
       <h1>La page recherchée n'existe pas.</h1>
-      <img src="large_logo_remplamatch.png" alt="Logo RemplaMatch" width="50%">
+      <img src="/app/assets/images/large_logo_remplamatch.png" alt="Logo RemplaMatch" width="50%">
       <p>Le lien que vous avez tapé n'existe pas ou a pu être supprimé.</p>
       <br>
       <a href="javascript:history.back()">Page précédente</a>
